<resources>
    <string name="app_name">记账本</string>
    <string name="editone">记一笔</string>

    <string name="add_remark">添加备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="remark">备注</string>
    <string name="please_input_time">请输入时间</string>
    <string name="set_budget">设置预算</string>

    <string name="chart_info">账单详情</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="please_search">请输入搜索信息</string>
    <string name="data_empty">数据为空，无此类记录</string>

    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="history">历史记录</string>
    <string name="history_info">本月账单记录</string>
    <string name="info">详情</string>

</resources>