<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_more_btn_about"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableTop="@mipmap/about"
            android:text="@string/about"/>

        <Button
            android:id="@+id/dialog_more_btn_settings"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableTop="@mipmap/settings"
            android:text="@string/settings"/>

        <Button
            android:id="@+id/dialog_more_btn_history"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/history"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/history" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">
        <Button
            android:id="@+id/dialog_more_btn_info"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/info"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/info" />
    </LinearLayout>

    <ImageView
        android:id="@+id/dialog_more_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>